jhub image without shibboleth auth. gesishub with keycloak and without /jupyter/ url path. enable auto login and redirect to home page (instead of logout.html) when logout.

--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -103,7 +103,7 @@ binderhub:
           'production': production,
           'version': 'beta',
           'home_url': '/',
-          'gesishub_url': '/jupyter/',
+          'gesishub_url': '/hub/',
           'gesisbinder_url': '/binder/',
           'about_url': '/about/',
           'tou_url': '/terms_of_use/',
