--- a/gesishub/config_test.yaml
+++ b/gesishub/config_test.yaml
@@ -8,8 +8,7 @@ jupyterhub:
         prometheus.io/scrape: 'false'
     extraConfig:
       010-orc: |
-        c.Authenticator.shibboleth_logout_url = 'https://notebooks-test.gesis.org/Shibboleth.sso/Logout?return=https://notebooks-test.gesis.org/'
-        c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org/jupyter/'
+        c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org'
       020-templates: |
         staging = True
         production = False
@@ -20,6 +19,17 @@ jupyterhub:
       limits:
         cpu: "0.5"
         memory: 1Gi
+    extraEnv:
+      OAUTH2_AUTHORIZE_URL: https://notebooks-test.gesis.org/auth/realms/gesis/protocol/openid-connect/auth
+      OAUTH2_TOKEN_URL: https://notebooks-test.gesis.org/auth/realms/gesis/protocol/openid-connect/token
+      OAUTH_CALLBACK_URL: https://notebooks-test.gesis.org/hub/oauth_callback
+
+  auth:
+    custom:
+      config:
+        login_service: "Test Login"
+        token_url: https://notebooks-test.gesis.org/auth/realms/gesis/protocol/openid-connect/token
+        userdata_url: https://notebooks-test.gesis.org/auth/realms/gesis/protocol/openid-connect/userinfo
 
   proxy:
     service:
