--- a/gesishub/config.yaml
+++ b/gesishub/config.yaml
@@ -3,11 +3,10 @@ jupyterhub:
     # below is already default of z2jh chart
     #service:
     #  annotations:
-    #    prometheus.io/path: "/jupyter/hub/metrics"
+    #    prometheus.io/path: "/hub/metrics"
     extraConfig:
       010-orc: |
-        c.Authenticator.shibboleth_logout_url = 'https://notebooks.gesis.org/Shibboleth.sso/Logout?return=https://notebooks.gesis.org/'
-        c.JupyterHub.bind_url = 'https://notebooks.gesis.org/jupyter/'
+        c.JupyterHub.bind_url = 'https://notebooks.gesis.org'
       020-templates: |
         staging = False
         production = True
