--- a/gesishub/docker/k8s_hub/Dockerfile
+++ b/gesishub/docker/k8s_hub/Dockerfile
@@ -1,6 +1,4 @@
-# https://github.com/gesiscss/jhub_shibboleth_auth/tree/4c1eee2dab273ae960e46de016855e5a9deedace/docker/k8s_hub
-FROM gesiscss/k8s-hub:0.8.2-v1.5.0
-
+FROM jupyterhub/k8s-hub:0.8.2
 USER root
 COPY templates /srv/jhub_custom_templates
 USER ${NB_USER}
