--- a/load_balancer/snippets/ignore_fonts.conf
+++ b/load_balancer/snippets/ignore_fonts.conf
@@ -1,10 +1,10 @@
 # JupyterHub's style.min.css looks for fonts files in wrong folder
 # dont rewrite and fix the path because we dont want to use these fonts
-location ~* ^/jupyter/hub/static/fonts/.+\.(woff|woff2|ttf)$
+location ~* ^/hub/static/fonts/.+\.(woff|woff2|ttf)$
 {
     access_log off;  # turn off access log
     return 404;
-    #rewrite ^/jupyter/hub/static/fonts/(.*)$ /jupyter/hub/static/components/bootstrap/fonts/$1 last;
+    #rewrite ^/hub/static/fonts/(.*)$ /hub/static/components/bootstrap/fonts/$1 last;
 }
 # ignore fonts of BinderHub (they are not found anyway when base url is different than /)
 # dont rewrite and fix the path because we dont want to use these fonts
