--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ deploy_staging:
       if git diff HEAD~ --name-only | egrep 'jupyterhub/config_test.yaml|jupyterhub/_secret_test.yaml|jupyterhub/yourserver/'; then
         mode+="-jhubtestns"
       fi;
-      if git diff HEAD~ --name-only | egrep 'binderhub/config_test.yaml|binderhub/_secret_test.yaml|binderhub/gesisbinder/'; then
+      if git diff HEAD~ --name-only | egrep 'gesisbinder/config_test.yaml|gesisbinder/_secret_test.yaml|gesisbinder/gesisbinder/'; then
         mode+="-bhubtestns"
       fi;
       echo "####### mode: $mode"
@@ -142,7 +142,7 @@ deploy_prod:
       if git diff HEAD~ --name-only | egrep 'jupyterhub/config.yaml|jupyterhub/_secret.yaml|jupyterhub/yourserver/'; then
         mode+="-jhubns"
       fi;
-      if git diff HEAD~ --name-only | egrep 'binderhub/config.yaml|binderhub/_secret.yaml|binderhub/gesisbinder/'; then
+      if git diff HEAD~ --name-only | egrep 'gesisbinder/config.yaml|gesisbinder/_secret.yaml|gesisbinder/gesisbinder/'; then
         mode+="-bhubns"
       fi;
       echo "####### mode: $mode"
