--- a/gesisbinder/config_test.yaml
+++ b/gesisbinder/config_test.yaml
@@ -42,7 +42,7 @@ binderhub:
         ENV REPO_URL={repo_url}
         RUN cd /tmp \
          && wget -q https://github.com/gesiscss/orc/archive/staging.tar.gz -O orc.tar.gz \
-         && tar --wildcards -xzf orc.tar.gz --strip 2 */binderhub/appendix\
+         && tar --wildcards -xzf orc.tar.gz --strip 2 */gesisbinder/appendix\
          && ./appendix/run-appendix \
          && rm -rf orc.tar.gz appendix
         USER $NB_USER
