--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,10 +37,10 @@ build_job:
       #CI_COMMIT_SHA_8=${CI_COMMIT_SHA:0:8}
       CI_COMMIT_SHA_SHORT="$(git rev-parse --short HEAD)"
       echo $CI_COMMIT_SHA_SHORT
-      if git diff HEAD~ --name-only | egrep 'jupyterhub/docker/k8s_hub/Dockerfile|jupyterhub/docker/k8s_hub/templates/'; then
+      if git diff HEAD~ --name-only | egrep 'gesishub/docker/k8s_hub/Dockerfile|gesishub/docker/k8s_hub/templates/'; then
         echo "####### gesiscss/k8s-hub-orc:$CI_COMMIT_SHA_SHORT"
         docker login -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
-        docker build -t gesiscss/k8s-hub-orc:$CI_COMMIT_SHA_SHORT jupyterhub/docker/k8s_hub/.
+        docker build -t gesiscss/k8s-hub-orc:$CI_COMMIT_SHA_SHORT gesishub/docker/k8s_hub/.
         docker push gesiscss/k8s-hub-orc:$CI_COMMIT_SHA_SHORT
       fi;
       if git diff HEAD~ --name-only | egrep 'nginx_shibboleth/docker/Dockerfile'; then
@@ -95,7 +95,7 @@ deploy_staging:
       if git diff HEAD~ --name-only | egrep 'gallery/config_test.yaml'; then
         mode+="-gallerytestapp"
       fi;
-      if git diff HEAD~ --name-only | egrep 'jupyterhub/config_test.yaml|jupyterhub/_secret_test.yaml|jupyterhub/yourserver/'; then
+      if git diff HEAD~ --name-only | egrep 'gesishub/config_test.yaml|gesishub/_secret_test.yaml|gesishub/gesishub/'; then
         mode+="-jhubtestns"
       fi;
       if git diff HEAD~ --name-only | egrep 'gesisbinder/config_test.yaml|gesisbinder/_secret_test.yaml|gesisbinder/gesisbinder/'; then
@@ -139,7 +139,7 @@ deploy_prod:
       if git diff HEAD~ --name-only | egrep 'gallery/config.yaml'; then
         mode+="-galleryapp"
       fi;
-      if git diff HEAD~ --name-only | egrep 'jupyterhub/config.yaml|jupyterhub/_secret.yaml|jupyterhub/yourserver/'; then
+      if git diff HEAD~ --name-only | egrep 'gesishub/config.yaml|gesishub/_secret.yaml|gesishub/gesishub/'; then
         mode+="-jhubns"
       fi;
       if git diff HEAD~ --name-only | egrep 'gesisbinder/config.yaml|gesisbinder/_secret.yaml|gesisbinder/gesisbinder/'; then
