--- a/gesishub/gesishub/Chart.yaml
+++ b/gesishub/gesishub/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
 description: A Helm chart for JupyterHub deployment on notebooks.gesis.org
-name: yourserver
+name: gesishub
 version: 0.1.0
