--- a/orc_site/deploy/orc-site-app.yaml
+++ b/orc_site/deploy/orc-site-app.yaml
@@ -47,7 +47,7 @@ spec:
           value:  "notebooks.gesis.org"
         - name: PRODUCTION_SERVER
           value: "true"
-        - name: JHUB_UNDER_MAINTENANCE
+        - name: GESISHUB_UNDER_MAINTENANCE
           value: "false"
         resources:
           requests:
