--- a/gesishub/gesishub/requirements.yaml
+++ b/gesishub/gesishub/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
 - name: jupyterhub
-  version: "0.8.2"
+  version: "0.9-dcde99a"
   repository: "https://jupyterhub.github.io/helm-chart"
