--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -66,7 +66,7 @@ jupyterhub:
           @admin_only
           async def get(self):
               available = {'name', 'admin', 'running', 'last_activity'}
-              default_sort = ['last_activity', 'admin', 'name']
+              default_sort = ['last_activity']
               mapping = {'running': orm.Spawner.server_id}
               for name in available:
                   if name not in mapping:
@@ -157,7 +157,7 @@ jupyterhub:
                       logout_url = logout_url.replace('http', 'https', 1)
                     self.redirect(self.kc_logout_url + '?' + urlencode({'redirect_uri': logout_url}))
                 else:
-                    super().get()
+                    await super().get()
 
         from oauthenticator.generic import GenericOAuthenticator
         GenericOAuthenticator.logout_handler = KeycloakLogoutHandler
