--- a/orc_site/deploy/orc-site-app.yaml
+++ b/orc_site/deploy/orc-site-app.yaml
@@ -48,7 +48,7 @@ spec:
         - name: PRODUCTION_SERVER
           value: "true"
         - name: GESISHUB_UNDER_MAINTENANCE
-          value: "true"
+          value: "false"
         resources:
           requests:
             cpu: "0.25"
