ci: restart nginx

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,10 @@ deploy_staging:
   stage: deploy
   script:
     - |
+      if git diff HEAD~ --name-only | egrep 'load_balancer/sites-available/orc_test|load_balancer/snippets'; then
+        echo "####### Restarting nginx"
+        fab -H $K8S_BASE_WORKER_IP restart_nginx -p $K8S_BASE_WORKER_PASSWORD -r $CI_COMMIT_SHA -s
+
       echo "####### Running staging deploy"
       mode="fetch_co"
       #pip3 install fabric==2.4.*
@@ -103,6 +107,10 @@ deploy_prod:
 #    untracked: true
   script:
     - |
+      if git diff HEAD~ --name-only | egrep 'load_balancer/sites-available/orc|load_balancer/sites-available/default|load_balancer/snippets'; then
+        echo "####### Restarting nginx"
+        fab -H $K8S_BASE_WORKER_IP restart_nginx -p $K8S_BASE_WORKER_PASSWORD -r $CI_COMMIT_SHA
+
       echo "####### Running deploy"
       mode="fetch_co"
       #pip3 install fabric==2.4.*
