deploy binderhub-0.2.0-ae1a819 with jupyter/repo2docker:bf29f66f

--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -187,3 +187,15 @@ binderhub:
             mountPath: /etc/jupyter
           - name: etc-jupyter-templates
             mountPath: /etc/jupyter/templates
+
+    scheduling:
+      userScheduler:
+        enabled: false
+      podPriority:
+        enabled: false
+      userPlaceholder:
+        enabled: false
+
+    prePuller:
+      continuous:
+        enabled: false
