--- a/load_balancer/snippets/optimization.conf
+++ b/load_balancer/snippets/optimization.conf
@@ -3,3 +3,8 @@ client_body_buffer_size 128k;  # default is 8k|16k;
 client_max_body_size 1G;  # default is 1M
 proxy_buffers 32 32k;
 proxy_buffer_size 32k;
+# https://stackoverflow.com/questions/24453388/nginx-reverse-proxy-causing-504-gateway-timeout/36589120#36589120
+proxy_http_version 1.1;  # default is 1.0
+#proxy_connect_timeout 120s;  # default is 60s
+#proxy_send_timeout 120s;  # default is 60s
+#proxy_read_timeout 120s;  # default is 60s
