--- a/gallery/config_test.yaml
+++ b/gallery/config_test.yaml
@@ -32,9 +32,11 @@ spec:
       labels:
         app: gallery-test
     spec:
+      nodeSelector:
+        base: worker  # where database is
       containers:
       - name: gallery-test
-        image: gesiscss/binder-gallery:aa05280
+        image: gesiscss/binder-gallery:0e25bfa
         command: ["gunicorn"]
         args: ["-b", "0.0.0.0:5000", "-w", "4", "binder_gallery:app"]
         ports:
